--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <div class="marquee">
     <div class="marquee__group">
       <svg>
-        <use xlink:href="#mcdonalds" />
+        <use xlink:href="#junior" />
       </svg>
       <svg>
         <use xlink:href="#jordan" />
