--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         <use xlink:href="#spotify" />
       </svg>
       <svg>
-        <use xlink:href="#burger-king" />
+        <use xlink:href="#junior-lopes" />
       </svg>
       <svg>
         <use xlink:href="#honda" />
@@ -48,7 +48,7 @@
         <use xlink:href="#spotify" />
       </svg>
       <svg>
-        <use xlink:href="#burger-king" />
+        <use xlink:href="#junior-lopes" />
       </svg>
       <svg>
         <use xlink:href="#honda" />
